<resources>
    <string name="app_name">MoqueSync</string>
    <string name="label_events">Events</string>
    <string name="label_notifications">Notifications</string>
    <string name="label_prayer_times">Prayer Times</string>
    <string name="label_preferences">Preferences</string>
    <string name="label_devices">Devices</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="firebase_notification_topic">NotificationTopic</string>
    <string name="firebase_event_topic">EventTopic</string>
</resources>
