<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/nav_events"
        android:enabled="true"
        android:icon="@drawable/ic_nav_events"
        android:title="@string/label_events"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/nav_notifications"
        android:enabled="true"
        android:icon="@drawable/ic_nav_notifications"
        android:title="@string/label_notifications"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/nav_prayer_times"
        android:enabled="true"
        android:icon="@drawable/ic_nav_prayer_timings"
        android:title="@string/label_prayer_times"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/nav_portable_devices"
        android:enabled="true"
        android:icon="@drawable/ic_nav_devices"
        android:title="@string/label_devices"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/nav_preferences"
        android:enabled="true"
        android:icon="@drawable/ic_nav_preferences"
        android:title="@string/label_preferences"
        app:showAsAction="ifRoom" />

</menu>